# nunez-elizalde-2022-bids

./: LICENSE  README.md  pyproject.toml
inputs/: README.md
inputs/protocols/CR017/2019-11-13/10/: Protocol.mat
inputs/protocols/CR017/2019-11-13/11/: Protocol.mat
inputs/protocols/CR017/2019-11-13/12/: Protocol.mat
inputs/protocols/CR017/2019-11-13/13/: Protocol.mat
inputs/protocols/CR017/2019-11-13/2/: Protocol.mat
inputs/protocols/CR017/2019-11-13/3/: Protocol.mat
inputs/protocols/CR017/2019-11-13/4/: Protocol.mat
inputs/protocols/CR017/2019-11-13/5/: Protocol.mat
inputs/protocols/CR017/2019-11-13/6/: Protocol.mat
inputs/protocols/CR017/2019-11-13/7/: Protocol.mat
inputs/protocols/CR017/2019-11-13/8/: Protocol.mat
inputs/protocols/CR017/2019-11-13/9/: Protocol.mat
inputs/protocols/CR017/2019-11-14/1/: Protocol.mat
inputs/protocols/CR017/2019-11-14/10/: Protocol.mat
inputs/protocols/CR017/2019-11-14/11/: Protocol.mat
inputs/protocols/CR017/2019-11-14/12/: Protocol.mat
inputs/protocols/CR017/2019-11-14/13/: Protocol.mat
inputs/protocols/CR017/2019-11-14/14/: Protocol.mat
inputs/protocols/CR017/2019-11-14/15/: Protocol.mat
inputs/protocols/CR017/2019-11-14/2/: Protocol.mat
inputs/protocols/CR017/2019-11-14/3/: Protocol.mat
inputs/protocols/CR017/2019-11-14/4/: Protocol.mat
inputs/protocols/CR017/2019-11-14/5/: Protocol.mat
inputs/protocols/CR017/2019-11-14/6/: Protocol.mat
licenses/: DATA_LICENSE.md
src/nunez_elizalde_2022_bids/: __init__.py  cli.py  config.py  converter.py  upload.py
(+86 files in other folders)
